[package]
name = "group-motivation-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
log4rs = { version = "1.2.0", features = ["file_appender", "pattern_encoder"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"

dptree = "0.3.0"

tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.3"

lazy_static = "1.4.0"

chrono = "0.4.19"
openssl = { version = "0.10.63", features = ["vendored"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
openssl-sys = "0.9"
